sumo/tests/netconvert/errors/false_output/errors.netconvert
Error: Could not save net to 'output/net.net.xml'.
Quitting (conversion failed).
